Add Bytecode manipulation experiment